# cpp-3d-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  cpp_3d_game_engine_spec.md  vcpkg.json
Cpp3DEngine/: CMakeLists.txt  Cpp3DEngine.cpp  Cpp3DEngine.h
assets/models/: phase6_unit_cube.mtl  phase6_unit_cube_no_texture.mtl
assets/shaders/: basic_color.frag  basic_color.vert  lit_textured.frag  lit_textured.vert  textured_cube.frag  textured_cube.vert
assets/textures/: README.md
src/: main.cpp
src/Debug/: DebugGui.cpp  DebugGui.h
src/Engine/: Engine.cpp  Engine.h  Time.cpp  Time.h
src/Platform/: Window.cpp  Window.h
src/Rendering/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
